trunk/Archive2/45/7fdc5393066cf4/output
main.cpp: In function 'int main()':
main.cpp:22:18: error: 'is_trivially_constructible' is not a member of 'std'
               << std::is_trivially_constructible<Foo, char*>::value << '\n'
                  ^
main.cpp:22:53: error: expected primary-expression before ',' token
               << std::is_trivially_constructible<Foo, char*>::value << '\n'
                                                     ^
main.cpp:22:55: error: expected primary-expression before 'char'
               << std::is_trivially_constructible<Foo, char*>::value << '\n'
                                                       ^
